force-app/main/default/objects/ProductDueDateMatrix__c/ProductDueDateMatrix__c.object-meta.xml
<CustomObject>
    <label>ProductDueDateMatrix</label>
    <nameField>
        <label>ProductDueDateMatrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductDueDateMatrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>