force-app/main/default/objects/ProductDueDateMatrix__c/fields/Field_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Status__c</fullName>
    <label>Field Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facilities Available</fullName>
            </value>
            <value>
                <fullName>Facilities Not Available,ICB Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>