force-app/main/default/objects/ProductDueDateMatrix__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>IntervalAvailable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>