force-app/main/default/objects/ProductDueDateMatrix__c/fields/IntervalNotAvailable__c.field-meta.xml
<CustomField>
    <fullName>IntervalNotAvailable__c</fullName>
    <label>IntervalNotAvailable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>