force-app/main/default/objects/ProductDueDateMatrix__c/fields/Service_del__c.field-meta.xml
<CustomField>
    <fullName>Service_del__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B1/POTS</fullName>
            </value>
            <value>
                <fullName>Long Distance</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>Centrex/Centranet</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Voice Mail &amp; additional Features on existing service</fullName>
            </value>
            <value>
                <fullName>Analog Trunks</fullName>
            </value>
            <value>
                <fullName>IP Address Changes</fullName>
            </value>
            <value>
                <fullName>ISDN BRI</fullName>
            </value>
            <value>
                <fullName>ISDN PRI</fullName>
            </value>
            <value>
                <fullName>MIPT (area specific product)</fullName>
            </value>
            <value>
                <fullName>DIA T1 w/out router</fullName>
            </value>
            <value>
                <fullName>EIA Metro-E</fullName>
            </value>
            <value>
                <fullName>SIP Trunking</fullName>
            </value>
            <value>
                <fullName>IP Connect</fullName>
            </value>
            <value>
                <fullName>Metro-E Upgrade</fullName>
            </value>
            <value>
                <fullName>SONET</fullName>
            </value>
            <value>
                <fullName>Frame Relay</fullName>
            </value>
            <value>
                <fullName>Private Line DS1 (On-Net)</fullName>
            </value>
            <value>
                <fullName>Dedicated PL</fullName>
            </value>
            <value>
                <fullName>Wireless Hot Spots</fullName>
            </value>
            <value>
                <fullName>Wireless Hot Spots1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>